[package]
name = "axolotlsay"
description = "💬 a CLI for learning to distribute CLIs in rust"
version = "0.2.68"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mistydemeo/cargodisttest"

[dependencies]
cue = "2.0.0"
clap = { version = "4.1.4", features = ["derive"] }
unicode-width = "0.1.10"

[dev-dependencies]
assert_cmd = "2.0.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.0-github-custom-job-hooks"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@axodotdev"
# A GitHub repo to push Homebrew formulas to
tap = "mistydemeo/homebrew-cargodisttest"
# Plan jobs to run in CI
plan-jobs = ["./local-build-greeter"]
# Whether to publish prereleases to package managers
publish-prereleases = false
# Publish jobs to run in CI
pr-run-mode = "plan"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]

[workspace.metadata.dist.dependencies.homebrew]
cmake = '*'
libcue = { version = "2.2.1", targets = ["x86_64-apple-darwin"] }

[workspace.metadata.dist.dependencies.apt]
cmake = '*'
libcue-dev = '*'

[workspace.metadata.dist.dependencies.chocolatey]
lftp = '*'
cmake = '3.27.6'
