[package]
name = "axolotlsay"
description = "💬 a CLI for learning to distribute CLIs in rust"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/axodotdev/axolotlsay.git"
homepage = "https://github.com/axodotdev/axolotlsay"
authors = ["axodotdev <hello@axo.dev>"]

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
unicode-width = "0.1.10"

[dev-dependencies]
assert_cmd = "2.0.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.wix]
upgrade-guid = "25688B1E-471D-4B40-B861-729B52B5E8C5"
path-guid = "C351A336-4918-4E77-8F7C-04CA2C13DFB7"
license = false
eula = false
